fix: Adjust font sizes to increase legibility

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1290,6 +1290,7 @@ select:disabled {
 
 .section-input {
 	border-radius: var(--border-radius-value);
+	font-weight: 500;
 }
 
 .inputs-form > .details {
@@ -1646,7 +1647,6 @@ input[type="radio"] + label:focus {
 
 input[type="radio"]:checked + label {
 	background-image: none;
-	outline: 0;
 	-webkit-box-shadow: inset 0 0.125rem 0.25rem rgba(0,0,0,0.15),0 0.0625rem 0.125rem rgba(0,0,0,0.05);
 	-moz-box-shadow: inset 0 0.125rem 0.25rem rgba(0,0,0,0.15),0 0.0625rem 0.125rem rgba(0,0,0,0.05);
 	box-shadow: inset 0 0.125rem 0.25rem rgba(0,0,0,0.15),0 0.0625rem 0.125rem rgba(0,0,0,0.05);
@@ -1658,6 +1658,7 @@ input[type="radio"]:checked + label {
 	margin: var(--responsive-space--XXS);
 	border-radius: var(--responsive-space--XS);
 	position: relative;
+	font-weight: 600;
 }
 
 input[type="radio"] + label::after {
